Updated pom; Pushed Java version to 21; Removed deprecated new URL