@@ -1,19 +1,19 @@
 // <editor-fold desc="The MIT License" defaultstate="collapsed">
 /*
  * The MIT License
- * 
+ *
  * Copyright 2022 Studio 42 GmbH ( https://www.s42m.de ).
- * 
+ *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
  * in the Software without restriction, including without limitation the rights
  * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  * copies of the Software, and to permit persons to whom the Software is
  * furnished to do so, subject to the following conditions:
- * 
+ *
  * The above copyright notice and this permission notice shall be included in
  * all copies or substantial portions of the Software.
- * 
+ *
  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
@@ -35,6 +35,7 @@ import java.net.CookieManager;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
 import java.net.ProtocolException;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.util.Collections;
@@ -76,7 +77,7 @@ public class Web
 	{
 		assert url != null : "url != null";
 
-		this.url = new URL(url);
+		this.url = URI.create(url).toURL();
 	}
 
 	public Web(URL url)
@@ -91,7 +92,7 @@ public class Web
 		assert parameters != null : "parameters != null";
 		assert url != null : "url != null";
 
-		this.url = new URL(url);
+		this.url = URI.create(url).toURL();
 		this.parameters.putAll(parameters);
 	}
 
@@ -232,7 +233,7 @@ public class Web
 				first = false;
 			}
 
-			getUrl = new URL(getUrlString.toString());
+			getUrl = URI.create(getUrlString.toString()).toURL();
 		} else {
 			getUrl = url;
 		}
